configura autenticação JWT para administrador e ajusta resposta de login para retornar apenas o token

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,9 +2,14 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\painel_admin\Administrador: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        app_admin_provider:
+            entity:
+                class: App\Entity\painel_admin\Administrador
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -19,11 +24,30 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+        login:
+            pattern: ^/api/painel/admin/login
+            stateless: true
+            provider: app_admin_provider
+            json_login:
+                check_path: admin_login
+                username_path: email
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern: ^/api
+            stateless: true
+            provider: app_admin_provider
+            jwt: ~
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/painel/admin/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/painel/admin, roles: ROLE_ADMIN }
 
 when@test:
     security:
